text change and resume link

--- a/public/resume.html
+++ b/public/resume.html
@@ -150,7 +150,7 @@
             Dec 17 - Jun 18
           </div>
           <p>
-            Worked as a core member of the data science team to obtain insights about user retention, monetisation engagement and churn etc.
+            Worked as a core member of the data science team to obtain insights about user retention, monetisation, engagement and churn etc.
           </p>
         </div> <!-- END work-exp-block-->
       </div> <!-- END col-md-6 -->
@@ -167,7 +167,7 @@
             Mar 15 - Apr 16
           </div>
           <p>
-            Vocational trainer for technology where I taught over 120 students at the local schools of Vellore, Tamil Nadu.
+            Vocational trainer for technology where I taught over 120 students at the local schools and orphanages of Vellore, Tamil Nadu, India.
           </p>
         </div> <!-- END work-exp-block-->
       </div> <!-- END col-md-6 -->
@@ -246,7 +246,7 @@
 
     <div class="row" style="margin-top: 20px;">
       <div class="col-sm-12 text-center">
-        <a href="resume.html" class="btn btn-theme btn-active mr-md-3 wow slideInUp">download resume</a>
+        <a href="https://drive.google.com/open?id=1zvBGODkRwtd5yIElPud7gNeF4kRCrx5_ " target="_blank" class="btn btn-theme btn-active mr-md-3 wow slideInUp">download resume</a>
       </div>
     </div>
   </div> <!-- END container-->
