--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
           <li><strong>Full Name :</strong> Anshaj Khare</li>
           <li><strong>Birthday :</strong> 8 May 1996</li>
           <li><strong>Address :</strong> Hyderabad, Telangana, India</li>
-          <li><strong>Phone :</strong> <a href="tel:9943722207">+91 9943722207</a></li>
+          <!--<li><strong>Phone :</strong> <a href="tel:9943722207">+91 9943722207</a></li>-->
           <li><strong>Email :</strong> <a href="mailto:anshaj.khare2@gmail.com">anshaj.khare2@gmail.com</a></li>
           <li><strong>Job :</strong> Data Analyst</li>
           <li><strong>Github :</strong> <a href="https://github.com/fulcrum3/">fulcrum3 </a></li>
